<resources>
    <string name="app_name">BottomUp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button">Button</string>
    <string name="score">TextView</string>
    <string name="LoC">TextView</string>
    <string name="cpu">CPU:</string>
    <string name="button4">Button4</string>
    <string name="button3">Button3</string>
    <string name="button2">Button2</string>
    <string name="button1">Button1</string>
</resources>
